feat(fe): 修改setting功能与新增评论功能
